--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,16 @@
     font-size: 10px;
     text-align: end;
 }
+
+.body {
+    background-color: #48466d;
+    color: #3d84a8;
+}
+
+.table {
+    color: #3d84a8;
+}
+
+.btn {
+    border-color: #3d84a8;
+}
